--- a/public/style.css
+++ b/public/style.css
@@ -49,19 +49,21 @@ html {
     padding: 2rem 4rem;
     font-family: 'Ubuntu', sans-serif;
     background-color: white ;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-radius: 20px;
     box-shadow:15px 10px 30px #b3b1b5;
     /* width: 70%; */
-    /* justify-content: center; */
+    
 
   }
 
   .home-heading{
     color: black;
     position: relative;
-    left: 50px; 
+    /* left: 50px;  */
     font-weight: bolder;
+    display: flex;
+    justify-content: center;
     
   }
   
@@ -74,11 +76,12 @@ html {
      border-radius: 0;
      /* margin: 0px 30px; */
      width: 70%;
+     
 
   }
   .home-details .detail-col{
     /* display: flex;
-    flex-direction: row; */
+    justify-content: center; */
     margin:1rem 0;
     font-size: larger;
   }
